First configuration of nodeJS & React

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
-node_modules
+client-side/node_modules
+.idea/.gitignore
+.idea/FormReactExercise.iml
+.idea/codeStyles/
+.idea/jsLibraryMappings.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/vcs.xml
