--- a/server-side/package.json
+++ b/server-side/package.json
@@ -10,6 +10,8 @@
   "author": "Elbaz Yaacov",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "nodemon": "^2.0.6"
   },
